--- a/BASIC_FLUTTER_APP/aws_flutter_app/ios/Runner/Info.plist
+++ b/BASIC_FLUTTER_APP/aws_flutter_app/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
     <string>Need the camera to take pictures.</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+       <key>NSAllowsArbitraryLoads</key>
+       <true/>
+    </dict>
 </dict>
 </plist>
