--- a/BASIC_FLUTTER_APP/aws_flutter_app/pubspec.yaml
+++ b/BASIC_FLUTTER_APP/aws_flutter_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   amplify_core:
   amplify_flutter:
   amplify_auth_cognito:
+  amplify_storage_s3:
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
