--- a/BASIC_FLUTTER_APP/aws_flutter_app/pubspec.yaml
+++ b/BASIC_FLUTTER_APP/aws_flutter_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   amplify_flutter:
   amplify_auth_cognito:
   amplify_storage_s3:
+  amplify_analytics_pinpoint:
   cached_network_image:
 
 dev_dependencies:
